# ai-kanban-app

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md
backend/: AGENTS.md  pyproject.toml
backend/app/: ai.py  auth.py  board.py  db.py  main.py  models.py  projects.py
backend/tests/: test_ai.py  test_auth.py  test_board.py  test_chat.py  test_projects.py  test_root.py
docs/: DATABASE.md  PLAN.md
docs/specs/: 2026-06-20-card-editing-and-projects-design.md
frontend/: AGENTS.md  playwright.config.ts  vitest.config.ts
frontend/src/app/: page.test.tsx
frontend/src/components/: AuthGate.test.tsx  AuthGate.tsx  ChatSidebar.test.tsx  ChatSidebar.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanCardPreview.test.tsx  KanbanColumn.tsx  LoginForm.test.tsx  LoginForm.tsx  ProjectBar.test.tsx  ProjectBar.tsx  Workspace.test.tsx  Workspace.tsx
frontend/src/lib/: kanban.test.ts  projects.ts
frontend/tests/: auth.spec.ts  chat.spec.ts  helpers.ts  kanban.spec.ts  projects.spec.ts
scripts/: build-frontend.sh  start.ps1  start.sh  stop.ps1  stop.sh
