[project]
name = "pm-backend"
version = "0.1.0"
description = "Project Management MVP backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.0",
    "itsdangerous>=2.2.0",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.0",
    "httpx2>=2.4.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
omit = ["tests/*"]
